--- a/A_dbms/templates/dbms/provide/notify_show/fdd.html
+++ b/A_dbms/templates/dbms/provide/notify_show/fdd.html
@@ -1,8 +1,7 @@
 <div class="tc">
     <p class="tit"><strong>成都武侯武兴小额贷款有限责任公司</strong></p>
-    <p class="sub-head" style="padding-bottom: 25pt"><strong>个人住房抵押贷款项目贷款放款通知单</strong></p>
+    <p class="sub-head" style="padding-bottom: 15pt"><strong>个人住房抵押贷款项目贷款放款通知单</strong></p>
 </div>
-<div align="right">{{ date_today_str }}</div>
 <table>
     <tr>
         <td class="bb tc">借款人名称</td>
@@ -26,7 +25,7 @@
     </tr>
 
     <tr>
-        <td class="bb arg-bn" colspan="6" style="line-height: 18pt">
+        <td class="bb arg-bn" colspan="6" style="line-height: 25pt">
             审核材料：□贷款调查报告、□贷款项目评审意见书、□贷款审批表、□合同用印审批表、□借款和抵押合同原件、□抵押物房产证原件和他项权证原件、□抵押查档信息、□评估报告原件、□借款人和抵押人身份征复印件、□户口簿复印件、<br>□结婚证或离婚证复印件（如有）
         </td>
     </tr>
@@ -53,4 +52,4 @@
     </tr>
 </table>
 <div align="right">成都武侯武兴小额贷款有限责任公司</div>
-<div align="right">______年___月___日</div>
+<div align="right"><u>{{ date_today.year }}</u>年<u>{{ date_today.month }}</u>月<u>{{ date_today.day }}</u>日</div>
