--- a/templates/login.html
+++ b/templates/login.html
@@ -24,6 +24,7 @@
                 登录
             </button>
         </form>
-        <h1 style="color: #1c5a9c">成都武侯中小企业融资担保有限责任公司</h1>
+{#        <h1 style="color: #1c5a9c">成都武侯中小企业融资担保有限责任公司</h1>#}
+        <h1 style="color: #1c5a9c">成都武侯武兴小额贷款有限责任公司</h1>
     </div> <!-- /container -->
 {% endblock %}
