--- a/A_dbms/templates/dbms/article/article-scan-agree.html
+++ b/A_dbms/templates/dbms/article/article-scan-agree.html
@@ -5,9 +5,9 @@
 {% block right-content-container %}
 
     <div class="container-fluid" style="padding-left: 1px;">
-        {% include 'dbms/article/agree/article-agree-summry.html' %}
+{#        {% include 'dbms/article/agree/article-agree-summry.html' %}#}
         {% include 'dbms/article/scan/article-tab.html' %}
-        {% include 'dbms/article/agree/article-agree-tab.html' %}
+{#        {% include 'dbms/article/agree/article-agree-tab.html' %}#}
     </div>
 
 {% endblock %}
