--- a/A_dbms/templates/dbms/agree/agree_board/loan_en/loan-single-c.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_en/loan-single-c.html
@@ -1,10 +1,11 @@
 <div class="split"><!--封面-->
     {% include 'dbms/agree/agree_board/loan_en/01-cover.html' %}
 </div>
-<div>
+<div class="split"><!--正文-->
     <div>{% include 'dbms/agree/agree_board/loan_en/02-hp.html' %}</div>
     <div>{% include 'dbms/agree/agree_board/loan_en/e-01-text.html' %}</div>
 </div>
-<div style="padding-top: 25pt">
-    <div>{% include 'dbms/agree/agree_board/loan_en/s-sp.html' %}</div>
+
+<div class="split"> <!--签字页-->
+    {% include 'dbms/agree/agree_board/loan_en/s-sp.html' %}
 </div>
