--- a/A_dbms/templates/dbms/appraisal/appraisal-sign-x.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-sign-x.html
@@ -32,7 +32,7 @@
                 <td colspan="2">主送：风险管理部</td>
             </tr>
             <tr class="bb2">
-                <td colspan="2">抄送：担保业务部、行政部、相关项目经理</td>
+                <td colspan="2">抄送：小贷业务部、行政部、相关项目经理</td>
             </tr>
             <tr class="bb2">
                 <td class="bb2" colspan="2">备注：</td>
